asignment2-initial/src/main/mt22/parser/.antlr/MT22Parser.py
# Generated from c:\Users\nguye\Downloads\asignment2-initial\src\main\mt22\parser\MT22.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class MT22Parser ( Parser ):

    grammarFileName = "MT22.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'array'", "'of'", "'integer'", "'float'", 
                     "'string'", "'boolean'", "'auto'", "'inherit'", "'out'", 
                     "'void'", "'function'", "'::'", "'=='", "'!='", "'<'", 
                     "'<='", "'>'", "'>='", "'&&'", "'||'", "'+'", "'-'", 
                     "'*'", "'/'", "'%'", "'!'", "'if'", "'else'", "'for'", 
                     "'while'", "'do'", "'break'", "'continue'", "'return'", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'('", "')'", "'['", "']'", "'{'", "'}'", 
                     "';'", "','", "'='", "':'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "COMMENT", 
                      "BOOLEAN", "INTEGER", "FLOAT", "IDEN", "LA", "RA", 
                      "LB", "RB", "LC", "RC", "SEMI", "COMMA", "EQUAL", 
                      "COLON", "STRINGLIT", "WS", "UNCLOSE_STRING", "ILLEGAL_ESCAPE", 
                      "ERROR_CHAR" ]

    RULE_program = 0
    RULE_dec = 1
    RULE_declist = 2
    RULE_vardec = 3
    RULE_fundec = 4
    RULE_arraytype = 5
    RULE_dimensions = 6
    RULE_arraylit = 7
    RULE_fourautotype = 8
    RULE_variables = 9
    RULE_abc = 10
    RULE_identifierlist = 11
    RULE_parameter = 12
    RULE_parameterlist = 13
    RULE_re_type = 14
    RULE_func = 15
    RULE_expression = 16
    RULE_exp2 = 17
    RULE_exp3 = 18
    RULE_exp4 = 19
    RULE_exp5 = 20
    RULE_exp6 = 21
    RULE_exp7 = 22
    RULE_exp8 = 23
    RULE_exp9 = 24
    RULE_expresslist = 25
    RULE_element = 26
    RULE_index_op = 27
    RULE_funcall = 28
    RULE_statement = 29
    RULE_lhs = 30
    RULE_ass_state = 31
    RULE_if_state = 32
    RULE_for_state = 33
    RULE_while_state = 34
    RULE_dowhile = 35
    RULE_break_state = 36
    RULE_continue_state = 37
    RULE_re_state = 38
    RULE_block_element = 39
    RULE_block_ = 40
    RULE_block_state = 41

    ruleNames =  [ "program", "dec", "declist", "vardec", "fundec", "arraytype", 
                   "dimensions", "arraylit", "fourautotype", "variables", 
                   "abc", "identifierlist", "parameter", "parameterlist", 
                   "re_type", "func", "expression", "exp2", "exp3", "exp4", 
                   "exp5", "exp6", "exp7", "exp8", "exp9", "expresslist", 
                   "element", "index_op", "funcall", "statement", "lhs", 
                   "ass_state", "if_state", "for_state", "while_state", 
                   "dowhile", "break_state", "continue_state", "re_state", 
                   "block_element", "block_", "block_state" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    COMMENT=35
    BOOLEAN=36
    INTEGER=37
    FLOAT=38
    IDEN=39
    LA=40
    RA=41
    LB=42
    RB=43
    LC=44
    RC=45
    SEMI=46
    COMMA=47
    EQUAL=48
    COLON=49
    STRINGLIT=50
    WS=51
    UNCLOSE_STRING=52
    ILLEGAL_ESCAPE=53
    ERROR_CHAR=54

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declist(self):
            return self.getTypedRuleContext(MT22Parser.DeclistContext,0)


        def EOF(self):
            return self.getToken(MT22Parser.EOF, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_program




    def program(self):

        localctx = MT22Parser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 84
            self.declist()
            self.state = 85
            self.match(MT22Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DecContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def vardec(self):
            return self.getTypedRuleContext(MT22Parser.VardecContext,0)


        def fundec(self):
            return self.getTypedRuleContext(MT22Parser.FundecContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_dec




    def dec(self):

        localctx = MT22Parser.DecContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_dec)
        try:
            self.state = 89
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 87
                self.vardec()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 88
                self.fundec()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def dec(self):
            return self.getTypedRuleContext(MT22Parser.DecContext,0)


        def declist(self):
            return self.getTypedRuleContext(MT22Parser.DeclistContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_declist




    def declist(self):

        localctx = MT22Parser.DeclistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_declist)
        try:
            self.state = 95
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 91
                self.dec()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 92
                self.dec()
                self.state = 93
                self.declist()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VardecContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variables(self):
            return self.getTypedRuleContext(MT22Parser.VariablesContext,0)


        def SEMI(self):
            return self.getToken(MT22Parser.SEMI, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_vardec




    def vardec(self):

        localctx = MT22Parser.VardecContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_vardec)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 97
            self.variables()
            self.state = 98
            self.match(MT22Parser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FundecContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def func(self):
            return self.getTypedRuleContext(MT22Parser.FuncContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_fundec




    def fundec(self):

        localctx = MT22Parser.FundecContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_fundec)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100
            self.func()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArraytypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LB(self):
            return self.getToken(MT22Parser.LB, 0)

        def RB(self):
            return self.getToken(MT22Parser.RB, 0)

        def fourautotype(self):
            return self.getTypedRuleContext(MT22Parser.FourautotypeContext,0)


        def dimensions(self):
            return self.getTypedRuleContext(MT22Parser.DimensionsContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_arraytype




    def arraytype(self):

        localctx = MT22Parser.ArraytypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_arraytype)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            self.match(MT22Parser.T__0)
            self.state = 103
            self.match(MT22Parser.LB)
            self.state = 105
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MT22Parser.INTEGER:
                self.state = 104
                self.dimensions()


            self.state = 107
            self.match(MT22Parser.RB)
            self.state = 108
            self.match(MT22Parser.T__1)
            self.state = 109
            self.fourautotype()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DimensionsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INTEGER(self):
            return self.getToken(MT22Parser.INTEGER, 0)

        def COMMA(self):
            return self.getToken(MT22Parser.COMMA, 0)

        def dimensions(self):
            return self.getTypedRuleContext(MT22Parser.DimensionsContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_dimensions




    def dimensions(self):

        localctx = MT22Parser.DimensionsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_dimensions)
        try:
            self.state = 115
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 111
                self.match(MT22Parser.INTEGER)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 112
                self.match(MT22Parser.INTEGER)
                self.state = 113
                self.match(MT22Parser.COMMA)
                self.state = 114
                self.dimensions()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArraylitContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LC(self):
            return self.getToken(MT22Parser.LC, 0)

        def RC(self):
            return self.getToken(MT22Parser.RC, 0)

        def expresslist(self):
            return self.getTypedRuleContext(MT22Parser.ExpresslistContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_arraylit




    def arraylit(self):

        localctx = MT22Parser.ArraylitContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_arraylit)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 117
            self.match(MT22Parser.LC)
            self.state = 120
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22Parser.T__21, MT22Parser.T__25, MT22Parser.BOOLEAN, MT22Parser.INTEGER, MT22Parser.FLOAT, MT22Parser.IDEN, MT22Parser.LA, MT22Parser.LC, MT22Parser.STRINGLIT]:
                self.state = 118
                self.expresslist()
                pass
            elif token in [MT22Parser.RC]:
                pass
            else:
                raise NoViableAltException(self)

            self.state = 122
            self.match(MT22Parser.RC)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FourautotypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def arraytype(self):
            return self.getTypedRuleContext(MT22Parser.ArraytypeContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_fourautotype




    def fourautotype(self):

        localctx = MT22Parser.FourautotypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_fourautotype)
        try:
            self.state = 129
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22Parser.T__2]:
                self.enterOuterAlt(localctx, 1)
                self.state = 124
                self.match(MT22Parser.T__2)
                pass
            elif token in [MT22Parser.T__3]:
                self.enterOuterAlt(localctx, 2)
                self.state = 125
                self.match(MT22Parser.T__3)
                pass
            elif token in [MT22Parser.T__4]:
                self.enterOuterAlt(localctx, 3)
                self.state = 126
                self.match(MT22Parser.T__4)
                pass
            elif token in [MT22Parser.T__5]:
                self.enterOuterAlt(localctx, 4)
                self.state = 127
                self.match(MT22Parser.T__5)
                pass
            elif token in [MT22Parser.T__0]:
                self.enterOuterAlt(localctx, 5)
                self.state = 128
                self.arraytype()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VariablesContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identifierlist(self):
            return self.getTypedRuleContext(MT22Parser.IdentifierlistContext,0)


        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def fourautotype(self):
            return self.getTypedRuleContext(MT22Parser.FourautotypeContext,0)


        def abc(self):
            return self.getTypedRuleContext(MT22Parser.AbcContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_variables




    def variables(self):

        localctx = MT22Parser.VariablesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_variables)
        try:
            self.state = 138
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 131
                self.identifierlist()
                self.state = 132
                self.match(MT22Parser.COLON)
                self.state = 135
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [MT22Parser.T__0, MT22Parser.T__2, MT22Parser.T__3, MT22Parser.T__4, MT22Parser.T__5]:
                    self.state = 133
                    self.fourautotype()
                    pass
                elif token in [MT22Parser.T__6]:
                    self.state = 134
                    self.match(MT22Parser.T__6)
                    pass
                else:
                    raise NoViableAltException(self)

                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 137
                self.abc()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AbcContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDEN(self):
            return self.getToken(MT22Parser.IDEN, 0)

        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def EQUAL(self):
            return self.getToken(MT22Parser.EQUAL, 0)

        def expression(self):
            return self.getTypedRuleContext(MT22Parser.ExpressionContext,0)


        def fourautotype(self):
            return self.getTypedRuleContext(MT22Parser.FourautotypeContext,0)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(MT22Parser.COMMA)
            else:
                return self.getToken(MT22Parser.COMMA, i)

        def abc(self):
            return self.getTypedRuleContext(MT22Parser.AbcContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_abc




    def abc(self):

        localctx = MT22Parser.AbcContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_abc)
        try:
            self.state = 154
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 140
                self.match(MT22Parser.IDEN)
                self.state = 141
                self.match(MT22Parser.COLON)
                self.state = 144
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [MT22Parser.T__0, MT22Parser.T__2, MT22Parser.T__3, MT22Parser.T__4, MT22Parser.T__5]:
                    self.state = 142
                    self.fourautotype()
                    pass
                elif token in [MT22Parser.T__6]:
                    self.state = 143
                    self.match(MT22Parser.T__6)
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 146
                self.match(MT22Parser.EQUAL)
                self.state = 147
                self.expression()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 148
                self.match(MT22Parser.IDEN)
                self.state = 149
                self.match(MT22Parser.COMMA)
                self.state = 150
                self.abc()
                self.state = 151
                self.match(MT22Parser.COMMA)
                self.state = 152
                self.expression()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IdentifierlistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDEN(self):
            return self.getToken(MT22Parser.IDEN, 0)

        def COMMA(self):
            return self.getToken(MT22Parser.COMMA, 0)

        def identifierlist(self):
            return self.getTypedRuleContext(MT22Parser.IdentifierlistContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_identifierlist




    def identifierlist(self):

        localctx = MT22Parser.IdentifierlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_identifierlist)
        try:
            self.state = 160
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 156
                self.match(MT22Parser.IDEN)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 157
                self.match(MT22Parser.IDEN)
                self.state = 158
                self.match(MT22Parser.COMMA)
                self.state = 159
                self.identifierlist()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParameterContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDEN(self):
            return self.getToken(MT22Parser.IDEN, 0)

        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def fourautotype(self):
            return self.getTypedRuleContext(MT22Parser.FourautotypeContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_parameter




    def parameter(self):

        localctx = MT22Parser.ParameterContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_parameter)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 163
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MT22Parser.T__7:
                self.state = 162
                self.match(MT22Parser.T__7)


            self.state = 166
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MT22Parser.T__8:
                self.state = 165
                self.match(MT22Parser.T__8)


            self.state = 168
            self.match(MT22Parser.IDEN)
            self.state = 169
            self.match(MT22Parser.COLON)
            self.state = 170
            self.fourautotype()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParameterlistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def parameter(self):
            return self.getTypedRuleContext(MT22Parser.ParameterContext,0)


        def COMMA(self):
            return self.getToken(MT22Parser.COMMA, 0)

        def parameterlist(self):
            return self.getTypedRuleContext(MT22Parser.ParameterlistContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_parameterlist




    def parameterlist(self):

        localctx = MT22Parser.ParameterlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_parameterlist)
        try:
            self.state = 177
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,13,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 172
                self.parameter()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 173
                self.parameter()
                self.state = 174
                self.match(MT22Parser.COMMA)
                self.state = 175
                self.parameterlist()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Re_typeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def fourautotype(self):
            return self.getTypedRuleContext(MT22Parser.FourautotypeContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_re_type




    def re_type(self):

        localctx = MT22Parser.Re_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_re_type)
        try:
            self.state = 182
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22Parser.T__0, MT22Parser.T__2, MT22Parser.T__3, MT22Parser.T__4, MT22Parser.T__5]:
                self.enterOuterAlt(localctx, 1)
                self.state = 179
                self.fourautotype()
                pass
            elif token in [MT22Parser.T__9]:
                self.enterOuterAlt(localctx, 2)
                self.state = 180
                self.match(MT22Parser.T__9)
                pass
            elif token in [MT22Parser.T__6]:
                self.enterOuterAlt(localctx, 3)
                self.state = 181
                self.match(MT22Parser.T__6)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDEN(self, i:int=None):
            if i is None:
                return self.getTokens(MT22Parser.IDEN)
            else:
                return self.getToken(MT22Parser.IDEN, i)

        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def re_type(self):
            return self.getTypedRuleContext(MT22Parser.Re_typeContext,0)


        def LA(self):
            return self.getToken(MT22Parser.LA, 0)

        def RA(self):
            return self.getToken(MT22Parser.RA, 0)

        def parameterlist(self):
            return self.getTypedRuleContext(MT22Parser.ParameterlistContext,0)


        def block_state(self):
            return self.getTypedRuleContext(MT22Parser.Block_stateContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_func




    def func(self):

        localctx = MT22Parser.FuncContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_func)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 184
            self.match(MT22Parser.IDEN)
            self.state = 185
            self.match(MT22Parser.COLON)
            self.state = 186
            self.match(MT22Parser.T__10)
            self.state = 187
            self.re_type()
            self.state = 188
            self.match(MT22Parser.LA)
            self.state = 191
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22Parser.T__7, MT22Parser.T__8, MT22Parser.IDEN]:
                self.state = 189
                self.parameterlist()
                pass
            elif token in [MT22Parser.RA]:
                pass
            else:
                raise NoViableAltException(self)

            self.state = 193
            self.match(MT22Parser.RA)
            self.state = 196
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MT22Parser.T__7:
                self.state = 194
                self.match(MT22Parser.T__7)
                self.state = 195
                self.match(MT22Parser.IDEN)

